server: add POST /files/ that reads body as plaintext ACH file
Issue: https://github.com/moov-io/ach/issues/254
